--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,19 @@ plugins {
 
 android {
     namespace 'com.kalachev.aviv'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.kalachev.aviv"
         minSdk 28
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
-
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
