--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+        buildConfigField "String", "SERVER_ENDPOINT", "\"https://gsl-apps-technical-test.dignp.com\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -39,6 +40,7 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
 }
 
