Scaffold ui and navigation implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
+    // Navigation
+    implementation libs.androidx.navigation.compose
     // DI
     implementation libs.koin.android
     implementation libs.koin.androidx.compose
