--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,12 +73,16 @@ dependencies {
     implementation libs.ktor.serialization
     implementation libs.ktor.client.contentnegotiation
     implementation libs.ktor.client.logging
+    testImplementation libs.ktor.client.mock
 
     testImplementation libs.junit
+    testImplementation libs.junit
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.inline
+    testImplementation libs.kotlinx.coroutines.test
     androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
     androidTestImplementation platform(libs.androidx.compose.bom)
-    androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
-    debugImplementation libs.androidx.ui.test.manifest
+    testImplementation libs.kotlin.reflect
+    testImplementation libs.androidx.core.testing
 }
